Components/Mindtouch Knowledge Migration/Mindtouch Knowledge Migration/objects/KnowledgeCategoryMap__c.object
<CustomObject>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Category__c</fullName>
        <label>Current Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMLContent__c</fullName>
        <label>HTML Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindTouchPath__c</fullName>
        <label>MindTouch Path</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Category__c</fullName>
        <label>New Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>KnowledgeCategoryMap__c</referenceTo>
        <relationshipName>KnowledgeCategoryMaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this true once the child records are fetched using the current record.</description>
        <label>Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransformedHTMLContent__c</fullName>
        <label>Transformed HTML Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL_Name__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TF_EX_Knowledge Category Map</label>
    <nameField>
        <label>Knowledge Category Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Category Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>